pricing discovery and customer interview

--- a/get-startup-ideas-from-mturk.html
+++ b/get-startup-ideas-from-mturk.html
@@ -1,49 +1,33 @@
 <div style="font-family: Helvetica, Arial, Sans-Serif;">
-
-	<div style="background: #F7F2DA; padding: 5px 20px 10px 20px; margin-bottom: 15px;">
-
-		<p><strong>Got a Problem That Software Could Solve?</strong></p>
-
-		<ul>
-			<li><strong>What industry do you work in?</strong></li>
-			<li><strong>What is a big pain point in your daily work that is not yet solved by software?</strong></li>
-			<li><strong>Please describe how the software could solve your problem</strong></li>
-			<li><strong>Would you pay for software to solve this?</strong></li>
-		</ul>
-
-	</div>
-
-	<div style="padding: 5px 20px 10px 20px; border-radius: 10px; ">
-
-		<p><strong>PLEASE READ THESE <u>IMPORTANT</u> GUIDELINES</strong><br />
-		<em>Unfortunately, <u>we will reject submissions</u> that do not follow them.</em></p>
-
-		<ul>
-			<li>We are trying to find business opportunities, by sourcing real problems that can be solved by software.</li>
-			<li>Ideas should be as specific as possible. With details such as brand or system names if required.</li>
-			<li>Please do not submit the same idea twice :)</li>
-		</ul>
-
-	</div>
-
-	<p><textarea class="form-control" cols="80" name="answer" rows="15"></textarea></p>
-
-	<p><strong>This is a BAD example of an idea submitted to us:</strong></p>
-
-	<div style="background: #F7F2DA; padding: 5px 20px;">
-		<p>Textile Industry there is no software to track employee complaints.</p>
-	</div>
-	 
-	<p><strong>This is a GOOD example of an idea submitted to us:</strong></p>
-
-	<div style="background: #F7F2DA; padding: 5px 20px;">
-		<p>I am finance officer for a startup that has grown from 1-30 people over the course of 2 years. During the early growth phase a lot of people signed for many different SaaS services such as growth hacking tools, analytics tools etc.</p>
-
-		<p>Unfortunately, due to the disorganized nature of the early phase I am finding it difficult to hunt down all the different services that were signed up for. Also, since some early people have left I have no way of knowing what the password is or the email that was used to signup. Yet, various company credit cards are still getting billed!</p>
-
-		<p>The ideal solution to this problem would be a single place to view and manage all our SaaS tool subscriptions. A basic database type tool would be a start, but it would be even more useful if the tool could somehow control the actual spending and I could assign different users different amounts of monthly spends available for SaaS purchases.</p>
-
-		<p>Of course basic analytics would be very helpful so that I could keep a close eye on our overall SaaS spend on a monthly and yearly basis. It would also be helpful if it could keep track of emails and passwords.</p>
-	</div>
-
+   <div style="background: #F7F2DA; padding: 5px 20px 10px 20px; margin-bottom: 15px;">
+      <p><strong>Got a Problem That Software Could Solve?</strong></p>
+      <ul>
+         <li><strong>What industry do you work in?</strong></li>
+         <li><strong>What is a big pain point in your daily work that is not yet solved by software?</strong></li>
+         <li><strong>Please describe how the software could solve your problem</strong></li>
+         <li><strong>Would you pay for software to solve this?</strong></li>
+      </ul>
+   </div>
+   <div style="padding: 5px 20px 10px 20px; border-radius: 10px; ">
+      <p><strong>PLEASE READ THESE <u>IMPORTANT</u> GUIDELINES</strong><br />
+         <em>Unfortunately, <u>we will reject submissions</u> that do not follow them.</em>
+      </p>
+      <ul>
+         <li>We are trying to find business opportunities, by sourcing real problems that can be solved by software.</li>
+         <li>Ideas should be as specific as possible. With details such as brand or system names if required.</li>
+         <li>Please do not submit the same idea twice :)</li>
+      </ul>
+   </div>
+   <p><textarea class="form-control" cols="80" name="answer" rows="15"></textarea></p>
+   <p><strong>This is a BAD example of an idea submitted to us:</strong></p>
+   <div style="background: #F7F2DA; padding: 5px 20px;">
+      <p>Textile Industry there is no software to track employee complaints.</p>
+   </div>
+   <p><strong>This is a GOOD example of an idea submitted to us:</strong></p>
+   <div style="background: #F7F2DA; padding: 5px 20px;">
+      <p>I am finance officer for a startup that has grown from 1-30 people over the course of 2 years. During the early growth phase a lot of people signed for many different SaaS services such as growth hacking tools, analytics tools etc.</p>
+      <p>Unfortunately, due to the disorganized nature of the early phase I am finding it difficult to hunt down all the different services that were signed up for. Also, since some early people have left I have no way of knowing what the password is or the email that was used to signup. Yet, various company credit cards are still getting billed!</p>
+      <p>The ideal solution to this problem would be a single place to view and manage all our SaaS tool subscriptions. A basic database type tool would be a start, but it would be even more useful if the tool could somehow control the actual spending and I could assign different users different amounts of monthly spends available for SaaS purchases.</p>
+      <p>Of course basic analytics would be very helpful so that I could keep a close eye on our overall SaaS spend on a monthly and yearly basis. It would also be helpful if it could keep track of emails and passwords.</p>
+   </div>
 </div>
